@@ -1,3 +1,11 @@
+2001-03-14  Gene Z. Ragan  <gzr@eazel.com>
+
+	* libnautilus-extensions/nautilus-icon-container.c:
+	(icon_set_position):
+	Fixed a minor annoying layout bug on the desktop. When icons were placed
+	near the bottom of the desktop, they would sometimes jump
+	partially offscreen.
+	
 2001-03-14  John Sullivan  <sullivan@eazel.com>
 
 	Fixed bug 7696 ("Find" does nothing if location bar hidden)
